--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,17 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html {
+    font-family: 'Roboto', sans-serif;
+
+}
+
+body {
+    font-family: 'Inter', sans-serif;
+
+}
+.range-slider .range-slider__thumb{
+    width: 16px !important;
+    height: 16px !important;
+}
